--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Sep 12 2019 22:08:45 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Sep 12 2019 22:45:12 GMT+0000 (UTC)  -->
 <html data-wf-page="5d7a40f0fedbb62697883e63" data-wf-site="5d7a40f0fedbb609d9883e5e">
 <head>
   <meta charset="utf-8">
@@ -19,84 +19,16 @@
   <link href="icons/webclip.jpg" rel="apple-touch-icon">
 </head>
 <body data-w-id="5a382927284c460001a09b32" style="opacity:0" class="body">
-  <div id="Hero" class="navbar-white">
-    <div class="content-wrapper w-container">
-      <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
-        <div class="content-wrapper no-padding w-container"><a href="index.html" class="brand w-nav-brand w--current"><img src="images/Logo.png" width="76" alt=""></a>
-          <nav role="navigation" class="nav-menu w-nav-menu">
-            <div data-delay="0" data-hover="1" data-w-id="5699bda7-417e-eacb-30ba-58ac48d337f4" class="dropdown w-dropdown">
-              <div class="dropdown-toggle w-dropdown-toggle">
-                <div data-w-id="8d9a37d2-8100-5dcc-44c1-ce6835108835" class="dropdown-arrow w-icon-dropdown-toggle"></div>
-                <div>Layouts</div>
-              </div>
-              <nav class="w-dropdown-list"><a href="layout-1.html" class="dropdown-link w-dropdown-link">Layout 1</a><a href="layout-2.html" class="dropdown-link w-dropdown-link">Layout 2</a><a href="layout-3.html" class="dropdown-link w-dropdown-link">Layout 3</a></nav>
-            </div>
-            <div data-delay="0" data-hover="1" data-w-id="e7688e11-35b7-5045-a9e6-e3313ef8a6e8" class="dropdown w-dropdown">
-              <div class="dropdown-toggle w-dropdown-toggle">
-                <div class="dropdown-arrow w-icon-dropdown-toggle"></div>
-                <div>Pages</div>
-              </div>
-              <nav class="w-dropdown-list"><a href="instructions.html" class="dropdown-link w-dropdown-link">Instructions</a><a href="licensing.html" class="dropdown-link w-dropdown-link">Licensing</a><a href="style-guide.html" class="dropdown-link w-dropdown-link">Style Guide</a></nav>
-            </div>
-          </nav>
-          <div class="menu-button w-nav-button">
-            <div class="w-icon-nav-menu"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="hero-section">
-    <div class="content-wrapper w-container">
-      <h1>Template Layouts</h1>
-      <div>Discover the one for you</div>
-    </div>
-  </div>
-  <div class="content-section">
-    <div class="content-wrapper w-container">
-      <div>
-        <div>
-          <div class="full-border">
-            <h4 class="h4 less-border">Description</h4>
-            <div class="top-border small">
-              <p>Record is a <em>Webflow Template</em> that will help you stand out your <strong>online resume</strong> in a simple but beautiful way.</p>
-            </div>
-            <p>With 3 different types of layouts you have all ready to just pick the one you like the most!</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="black-section">
-    <div class="content-wrapper w-container">
-      <div class="flex-space">
-        <div class="layout"><a href="layout-1.html" class="link-block w-inline-block"><img src="images/1.jpg" width="600" srcset="images/1-p-500.jpeg 500w, images/1-p-800.jpeg 800w, images/1-p-1080.jpeg 1080w, images/1.jpg 1200w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 28vw, 29vw" alt=""></a><a href="layout-1.html" class="white-title link">Layout 1</a></div>
-        <div class="layout"><a href="layout-2.html" class="link-block w-inline-block"><img src="images/2.jpg" width="600" alt=""></a><a href="layout-2.html" class="white-title link">Layout 2</a></div>
-        <div class="layout"><a href="layout-3.html" class="link-block w-inline-block"><img src="images/3.jpg" width="600" srcset="images/3-p-500.jpeg 500w, images/3-p-800.jpeg 800w, images/3-p-1080.jpeg 1080w, images/3.jpg 1200w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 28vw, 29vw" alt=""></a><a href="layout-3.html" class="white-title link">Layout 3</a></div>
-      </div>
-    </div>
-  </div>
+  <div class="content-section"></div>
   <div class="content-section">
     <div class="content-wrapper w-container"></div>
   </div>
   <div class="content-section">
     <div class="content-wrapper w-container">
       <div data-w-id="fe34cc9c-9fc9-80ea-9962-47457195513b" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="inner-column-section">
-        <div class="side-left-column">
-          <div class="gray-title more-border">Features</div>
-        </div>
         <div class="side-right-column">
           <div class="less-bottom-border">
-            <h4 class="h4 less-border">Multiple Sections</h4>
-            <p>Create your own unique layout by combining, or mixing our multiple layouts sections.</p>
-          </div>
-          <div class="less-bottom-border">
             <h4 class="h4 less-border">Simple &amp; Clean Design</h4>
-            <p>Make a great first impression! Record features a beautiful yet simple design.</p>
-          </div>
-          <div class="less-bottom-border">
-            <h4 class="h4 less-border">Easy to use &amp; customize</h4>
-            <p>Record is a very easy template to use and even more to customize, you don&#x27;t need to be a Webflow expert!</p>
           </div>
           <div class="less-bottom-border">
             <h4 class="h4 less-border">Template Support</h4>
@@ -107,20 +39,7 @@
     </div>
   </div>
   <div class="content-section">
-    <div class="content-wrapper w-container">
-      <div class="inner-section">
-        <div class="flex-narrow center"><a target="_blank" href="https://webflow.com/templates/html/record-resume-website-template" class="button w-button">Buy Record Template</a></div>
-      </div>
-    </div>
-  </div>
-  <div class="footer-section">
-    <div class="content-wrapper w-container">
-      <div class="footer-container">
-        <div class="footer-left-column"><a href="index.html" class="brand-footer w-inline-block w--current"><img src="images/Logo.png" width="76" alt=""></a></div>
-        <div class="footer-righ-column"><a href="#" class="footer-link">University of Stuttgart</a><a href="#" class="footer-link">Github</a><a href="#" class="footer-link">LinkedIn</a><a href="#" class="footer-link last">Youtube</a></div>
-      </div>
-      <div class="notice"><a href="#" class="link-block-2 w-inline-block"></a></div>
-    </div>
+    <div class="content-wrapper w-container"></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
