--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Sep 12 2019 22:48:42 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Sep 12 2019 22:55:00 GMT+0000 (UTC)  -->
 <html data-wf-page="5d7a40f0fedbb605ce883e66" data-wf-site="5d7a40f0fedbb609d9883e5e">
 <head>
   <meta charset="utf-8">
@@ -34,7 +34,7 @@ background: #c7c7c7;
   <div id="Hero" class="navbar-white">
     <div class="content-wrapper w-container">
       <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
-        <div class="content-wrapper no-padding w-container"><a href="old-home.html" class="brand w-nav-brand"></a>
+        <div class="content-wrapper no-padding w-container"><a href="index.html" class="brand w-nav-brand w--current"></a>
           <nav role="navigation" class="nav-menu w-nav-menu"><a href="#About-me" class="nav-link w-nav-link">About Me</a><a href="#Experience" class="nav-link w-nav-link">Education</a><a href="#" class="nav-link w-nav-link">Experience</a><a href="#" class="nav-link w-nav-link">Projects</a><a href="#Contact" class="nav-link w-nav-link">Contact</a></nav>
           <div class="menu-button w-nav-button">
             <div class="w-icon-nav-menu"></div>
@@ -60,7 +60,7 @@ background: #c7c7c7;
         </div>
         <div class="intro-right-column">
           <h1>Roboticist with a strong focus on Machine Learning</h1>
-          <p class="paragraph-2">My research focusses on the combination of decision theory andmachine learning, motivated by applications in robotics. The goal are learning robotic systems that are able to reason about their own state of knowledge (based on visual and tactile perception) and decide which actions might yield the most informative future data, make them learn even better and solve problems.</p>
+          <p class="paragraph-2">My research focusses on the combination of decision theory and machine learning, motivated by applications in robotics. The goal are learning robotic systems that are able to reason about their own state of knowledge (based on visual and tactile perception) and decide which actions might yield the most informative future data, make them learn even better and solve problems.</p>
         </div>
       </div>
       <div class="inner-column-section intro">
