--- a/licensing.html
+++ b/licensing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Sep 12 2019 22:48:42 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Sep 12 2019 22:55:00 GMT+0000 (UTC)  -->
 <html data-wf-page="5d7a40f0fedbb63c3b883e6a" data-wf-site="5d7a40f0fedbb609d9883e5e">
 <head>
   <meta charset="utf-8">
@@ -26,7 +26,7 @@
   <div id="Hero" class="navbar-white">
     <div class="content-wrapper w-container">
       <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
-        <div class="content-wrapper no-padding w-container"><a href="old-home.html" class="brand w-nav-brand"><img src="images/Logo.png" width="76" alt=""></a>
+        <div class="content-wrapper no-padding w-container"><a href="index.html" class="brand w-nav-brand"><img src="images/Logo.png" width="76" alt=""></a>
           <nav role="navigation" class="nav-menu w-nav-menu">
             <div data-delay="0" data-hover="1" data-w-id="5699bda7-417e-eacb-30ba-58ac48d337f4" class="dropdown w-dropdown">
               <div class="dropdown-toggle w-dropdown-toggle">
@@ -117,7 +117,7 @@
   <div class="footer-section">
     <div class="content-wrapper w-container">
       <div class="footer-container">
-        <div class="footer-left-column"><a href="old-home.html" class="brand-footer w-inline-block"><img src="images/Logo.png" width="76" alt=""></a></div>
+        <div class="footer-left-column"><a href="index.html" class="brand-footer w-inline-block"><img src="images/Logo.png" width="76" alt=""></a></div>
         <div class="footer-righ-column"><a href="#" class="footer-link">University of Stuttgart</a><a href="#" class="footer-link">Github</a><a href="#" class="footer-link">LinkedIn</a><a href="#" class="footer-link last">Youtube</a></div>
       </div>
       <div class="notice"><a href="#" class="link-block-2 w-inline-block"></a></div>
