--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Sep 12 2019 23:09:40 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Sep 12 2019 23:17:27 GMT+0000 (UTC)  -->
 <html data-wf-page="5d7a40f0fedbb605ce883e66" data-wf-site="5d7a40f0fedbb609d9883e5e">
 <head>
   <meta charset="utf-8">
@@ -35,7 +35,7 @@ background: #c7c7c7;
     <div class="content-wrapper w-container">
       <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
         <div class="content-wrapper no-padding w-container"><a href="index.html" class="brand w-nav-brand w--current"></a>
-          <nav role="navigation" class="nav-menu w-nav-menu"><a href="#About-me" class="nav-link w-nav-link">About Me</a><a href="#Experience" class="nav-link w-nav-link">Education</a><a href="#" class="nav-link w-nav-link">Experience</a><a href="#" class="nav-link w-nav-link">Projects</a><a href="#Contact" class="nav-link w-nav-link">Contact</a></nav>
+          <nav role="navigation" class="nav-menu w-nav-menu"><a href="#About-me" class="nav-link w-nav-link">About Me</a><a href="#Experience" class="nav-link w-nav-link">Education</a><a href="#Experience" class="nav-link w-nav-link">Experience</a><a href="#Projects" class="nav-link w-nav-link">Research Interests</a><a href="#Projects" class="nav-link w-nav-link">Projects</a><a href="#Faq" class="nav-link w-nav-link">Publications</a><a href="#Contact" class="nav-link w-nav-link">Contact</a></nav>
           <div class="menu-button w-nav-button">
             <div class="w-icon-nav-menu"></div>
           </div>
@@ -145,7 +145,7 @@ background: #c7c7c7;
             <div class="small-title"> * Grasp-Point Detection<br> * Object-Localisation<br> * Segmentation</div>
           </div>
         </div>
-        <div class="side-right-column">
+        <div id="Projects" class="side-right-column">
           <div class="gray-title">Projects</div>
           <div class="flex-space top-border"><a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/BAX.jpg" srcset="images/BAX-p-800.jpeg 800w, images/BAX.jpg 1064w" sizes="(max-width: 479px) 92vw, 30vw" alt="" class="scale-on-hover"><script type="application/json" class="w-json">{
   "items": [
