--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Sep 12 2019 23:17:27 GMT+0000 (UTC)  -->
+<!--  Last Published: Sun Sep 15 2019 11:02:31 GMT+0000 (UTC)  -->
 <html data-wf-page="5d7a40f0fedbb605ce883e66" data-wf-site="5d7a40f0fedbb609d9883e5e">
 <head>
   <meta charset="utf-8">
@@ -71,8 +71,8 @@ background: #c7c7c7;
                 <div class="less-line-height"><br>University of<br>Stuttgart</div>
               </a>
             </div>
-            <div class="static _2"><a href="https://de.linkedin.com/in/ralf-gulde-843565146" class="w-inline-block"><img src="images/iconmonstr-linkedin-3.png" width="62" alt="" class="scale-on-hover"></a>
-              <a href="https://de.linkedin.com/in/ralf-gulde-843565146" class="w-inline-block">
+            <div class="static _2"><a href="https://www.linkedin.com/in/ralf-gulde-3241a6193" class="w-inline-block"><img src="images/iconmonstr-linkedin-3.png" width="62" alt="" class="scale-on-hover"></a>
+              <a href="https://www.linkedin.com/in/ralf-gulde-3241a6193" class="w-inline-block">
                 <div class="less-line-height"><br>LinkedIn</div>
               </a>
             </div>
@@ -81,7 +81,7 @@ background: #c7c7c7;
                 <div class="less-line-height"><br>Github</div>
               </a>
             </div>
-            <div class="static _4"><a href="https://www.youtube.com/channel/UCSrw__xkxvnurfs1BSl6D4A" class="w-inline-block"><img src="images/youtube-3363633_960_720.png" width="62" srcset="images/youtube-3363633_960_720-p-500.png 500w, images/youtube-3363633_960_720.png 551w" sizes="(max-width: 479px) 19vw, 62px" alt="" class="scale-on-hover"></a>
+            <div class="static _4"><a href="https://www.youtube.com/channel/UCSrw__xkxvnurfs1BSl6D4A" class="w-inline-block"><img src="images/youtube-3363633_960_720.png" width="62" srcset="images/youtube-3363633_960_720-p-500.png 500w, images/youtube-3363633_960_720.png 551w" sizes="(max-width: 479px) 24vw, 62px" alt="" class="scale-on-hover"></a>
               <a href="https://www.youtube.com/channel/UCSrw__xkxvnurfs1BSl6D4A" class="w-inline-block">
                 <div class="less-line-height"><br>Youtube</div>
               </a>
@@ -125,7 +125,7 @@ background: #c7c7c7;
           <div class="less-bottom-border">
             <h4 class="h4 less-border">Student Research Assistant</h4>
             <div class="small-title">2014 ─ 2017</div>
-            <p>As a Student Research Assistant at the Institute for Control Engineering I developed robot control architecture in ROS. Furthermore I implemented controllers for sensor-supported robot tasks (e.g. visual servoing).</p>
+            <p>As a Student Research Assistant at the Institute for Control Engineering I developed a robot control architecture in ROS. Furthermore I implemented controllers for sensor-supported robot tasks (e.g. visual servoing).</p>
           </div>
         </div>
       </div>
@@ -212,7 +212,7 @@ background: #c7c7c7;
               <div class="flex">
                 <div class="answer"></div>
                 <div class="answer-paragraph">
-                  <p>Gulde, Ralf; Csiszar, Akos; Tuscher, Marc; Oliver, Riedel; Verl, Alexander: <br>&quot;Reinforcement Learning Approach to Vibration Compensation for Dynamic Systems&quot;<br>In: <em>2018 International Conference on Artificial Intelligence for Industries (AI4I)</em>, <em>2019</em></p>
+                  <p>Gulde, Ralf; Csiszar, Akos; Tuscher, Marc; Oliver, Riedel; Verl, Alexander: <br>&quot;Reinforcement Learning Approach to Vibration Compensation for Dynamic Systems&quot;<br>In: <em>2019 International Conference on Artificial Intelligence for Industries (AI4I)</em>, <em>2019 - Accepted</em></p>
                 </div>
               </div>
             </div>
@@ -224,7 +224,7 @@ background: #c7c7c7;
               <div class="flex">
                 <div class="answer"></div>
                 <div class="answer-paragraph">
-                  <p>Friedrich, Christian; Gulde, Ralf; Lechler, Armin; Verl, Alexander: <br>&quot;Maintenance automation: Concepts for manipulation planning, control and execution&quot; <a href="#">IEEE Transactions on Automation Science and Engineering (TASE), <em>2019</em></a></p>
+                  <p>Friedrich, Christian; Gulde, Ralf; Lechler, Armin; Verl, Alexander: <br>&quot;Maintenance automation: Concepts for manipulation planning, control and execution&quot; IEEE Transactions on AUtomation Science n Engineering (TASE), <em>2019 - In Review</em></p>
                 </div>
               </div>
             </div>
