--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Sep 15 2019 11:02:31 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Sep 16 2019 23:59:09 GMT+0000 (UTC)  -->
 <html data-wf-page="5d7a40f0fedbb605ce883e66" data-wf-site="5d7a40f0fedbb609d9883e5e">
 <head>
   <meta charset="utf-8">
@@ -151,9 +151,9 @@ background: #c7c7c7;
   "items": [
     {
       "type": "video",
-      "originalUrl": "https://www.youtube.com/watch?v=NjoOOrqd6XQ&t=3s",
-      "url": "https://www.youtube.com/watch?v=NjoOOrqd6XQ&t=3s",
-      "html": "<iframe class=\"embedly-embed\" src=\"//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FNjoOOrqd6XQ%3Fstart%3D3%26feature%3Doembed%26start%3D3&url=http%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DNjoOOrqd6XQ&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FNjoOOrqd6XQ%2Fhqdefault.jpg&args=start%3D3&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube\" width=\"940\" height=\"528\" scrolling=\"no\" frameborder=\"0\" allow=\"autoplay; fullscreen\" allowfullscreen=\"true\"></iframe>",
+      "originalUrl": "https://www.youtube.com/watch?v=NjoOOrqd6XQ&t=5s",
+      "url": "https://www.youtube.com/watch?v=NjoOOrqd6XQ&t=5s",
+      "html": "<iframe class=\"embedly-embed\" src=\"//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FNjoOOrqd6XQ%3Fstart%3D5%26feature%3Doembed%26start%3D5&url=http%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DNjoOOrqd6XQ&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FNjoOOrqd6XQ%2Fhqdefault.jpg&args=start%3D5&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube\" width=\"940\" height=\"528\" scrolling=\"no\" frameborder=\"0\" allow=\"autoplay; fullscreen\" allowfullscreen=\"true\"></iframe>",
       "thumbnailUrl": "https://i.ytimg.com/vi/NjoOOrqd6XQ/hqdefault.jpg",
       "width": 940,
       "height": 528
@@ -212,7 +212,7 @@ background: #c7c7c7;
               <div class="flex">
                 <div class="answer"></div>
                 <div class="answer-paragraph">
-                  <p>Gulde, Ralf; Csiszar, Akos; Tuscher, Marc; Oliver, Riedel; Verl, Alexander: <br>&quot;Reinforcement Learning Approach to Vibration Compensation for Dynamic Systems&quot;<br>In: <em>2019 International Conference on Artificial Intelligence for Industries (AI4I)</em>, <em>2019 - Accepted</em></p>
+                  <p>Gulde, Ralf; Csiszar, Akos; Tuscher, Marc; Oliver, Riedel; Verl, Alexander: <br>&quot;Reinforcement Learning Approach to Vibration Compensation for Dynamic Systems&quot;<br>In: <em>2019 International Conference on Artificial Intelligence for Industries (AI4I)</em>, <em>2019 <br>- Accepted</em></p>
                 </div>
               </div>
             </div>
@@ -224,7 +224,7 @@ background: #c7c7c7;
               <div class="flex">
                 <div class="answer"></div>
                 <div class="answer-paragraph">
-                  <p>Friedrich, Christian; Gulde, Ralf; Lechler, Armin; Verl, Alexander: <br>&quot;Maintenance automation: Concepts for manipulation planning, control and execution&quot; IEEE Transactions on AUtomation Science n Engineering (TASE), <em>2019 - In Review</em></p>
+                  <p>Friedrich, Christian; Gulde, Ralf; Lechler, Armin; Verl, Alexander: <br>&quot;Maintenance automation: Concepts for manipulation planning, control and execution&quot; In: The 2020 International Conference on Robotics and Automation (ICRA), <em>2019</em><em> <br>- In Review</em></p>
                 </div>
               </div>
             </div>
