--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!--  Last Published: Tue Sep 17 2019 00:02:02 GMT+0000 (UTC)  -->
 <html data-wf-page="5d7a40f0fedbb605ce883e66" data-wf-site="5d7a40f0fedbb609d9883e5e">
 <head>
+  <meta name="google-site-verification" content="zMQxasXox0Y2HCbOXEGYGfO7-mCgE45Xu1KGZ3esJ24" />
   <meta charset="utf-8">
   <title>Resume Ralf Gulde</title>
   <meta content="Ralf Gulde - Doctoral Researcher at the University of Stuttgart. Roboticist with a strong focus on Machine Learning." name="description">
