--- a/index.html
+++ b/index.html
@@ -228,6 +228,18 @@ background: #c7c7c7;
                 </div>
               </div>
             </div>
+            <div class="bottom-border">
+              <div class="flex-no-wrapp">
+                <div class="answer"></div>
+                <div class="question-text"></div>
+              </div>
+              <div class="flex">
+                <div class="answer"></div>
+                <div class="answer-paragraph">
+                  <p>Gulde, Ralf; Tuscher, Marc; Csiszar, Akos.; Riedel, Oliver;  Verl, Alexander; <br>Reinforcement Learning Approach to Vibration Compensation for Dynamic Feed Drive Systems. In <em>2019 Second International Conference on Artificial Intelligence for Industries (AI4I)</em> (pp. 26-29). IEEE.<em><br></em></p>
+                </div>
+              </div>
+            </div>
             <div class="bottom-border no-border">
               <div class="flex-no-wrapp">
                 <div class="answer"></div>
