--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ background: #c7c7c7;
               <div class="flex">
                 <div class="answer"></div>
                 <div class="answer-paragraph">
-                  <p>Gulde, Ralf; Tuscher, Marc; Csiszar, Akos.; Riedel, Oliver;  Verl, Alexander; <br>Reinforcement Learning Approach to Vibration Compensation for Dynamic Feed Drive Systems. In <em>2019 Second International Conference on Artificial Intelligence for Industries (AI4I)</em> (pp. 26-29). IEEE.<em><br></em></p>
+                  <p>Gulde, Ralf; Tuscher, Marc; Csiszar, Akos.; Riedel, Oliver;  Verl, Alexander; <br>Deep Reinforcement Learning using Cyclical Learning Rates . In <em>2020 Third International Conference on Artificial Intelligence for Industries (AI4I)</em> . IEEE.<em><br></em></p>
                 </div>
               </div>
             </div>
