--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ background: #c7c7c7;
             <div class="flex">
               <div class="answer"></div>
               <div class="answer-paragraph">
-                <p>Friedrich, Christian, Gulde, Ralf; Lechler, Armin; Verl, Alexander: <br>&quot;Maintenance automation: Concepts for manipulation planning, control and execution&quot; In: The 2020 International Conference on Robotics and Automation (ICRA), <em>2020 <br>- In Review</em><em><br></em></p>
+                <p>Friedrich, Christian, Gulde, Ralf; Lechler, Armin; Verl, Alexander: <br>&quot;Maintenance automation: Concepts for manipulation planning, control and execution&quot; In: IEEE Transactions on Automation Science and Engineering (TASE), <em>2020 <br>- In Review</em><em><br></em></p>
               </div>
             </div>
           </div>
