--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@ background: #c7c7c7;
         <div class="side-right-column">
           <div class="gray-title">Experience</div>
           <div class="less-bottom-border">
+            <h4 class="h4 less-border">Co-Founder @ sereact</h4>
+            <div class="small-title">2021 ─ Present</div>
+            <p>At sereact we built an adoptable AI to bring a new era of intelligent robots to commercial viability. We unleash the power of AI to enable our customers to close automation gaps and reach a new level of cost-efficiency.</p>
+          </div>
+          <div class="less-bottom-border">
             <h4 class="h4 less-border">Doctoral Student</h4>
             <div class="small-title">2018 ─ Present</div>
             <p>In my doctoral studies, I focus on simulation-based policy learning of robot manipulations and depolyment on real robot systems. For this purpose Reinforcement Learning algorithms are approched. To guarantee compact environmental representations based on sensor data a computer vision pipeline is developed.</p>
