--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ background: #c7c7c7;
           </div>
           <div class="less-bottom-border">
             <h4 class="h4 less-border">AI Researcher</h4>
-            <div class="small-title">2018 ─ Present</div>
+            <div class="small-title">2018 ─ 2020</div>
             <p>In my doctoral studies, I focus on simulation-based policy learning of robot manipulations and depolyment on real robot systems. For this purpose Reinforcement Learning algorithms are approched. To guarantee compact environmental representations based on sensor data a computer vision pipeline is developed.</p>
           </div>
           <div class="less-bottom-border">
