--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ background: #c7c7c7;
           <div class="less-bottom-border">
             <h4 class="h4 less-border">Co-Founder @ sereact</h4>
             <div class="small-title">2021 ─ Present</div>
-            <p>At sereact we built an adoptable AI to bring a new era of intelligent robots to commercial viability. We unleash the power of AI to enable our customers to close automation gaps and reach a new level of cost-efficiency.</p>
+            <p>At sereact we built an adaptable AI to bring a new era of intelligent robots to commercial viability. We unleash the power of AI to enable our customers to close automation gaps and reach a new level of cost-efficiency.</p>
           </div>
           <div class="less-bottom-border">
             <h4 class="h4 less-border">AI Researcher</h4>
