--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ background: #c7c7c7;
             <p>In my doctoral studies, I focus on simulation-based policy learning of robot manipulations and depolyment on real robot systems. For this purpose Reinforcement Learning algorithms are approched. To guarantee compact environmental representations based on sensor data a computer vision pipeline is developed.</p>
           </div>
           <div class="less-bottom-border">
-            <h4 class="h4 less-border">Intern</h4>
+            <h4 class="h4 less-border">Intern & Thesis Student</h4>
             <div class="small-title">2017</div>
             <p>During my time as an industrial intern at Festo AG, I researched hybrid and cooperative robotic assembly systems. A flexible task planner for the computation of optimal task sequence and task allocation in collaborative human-robot teams was introduced.</p>
           </div>
