--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ background: #c7c7c7;
             <div class="flex">
               <div class="answer"></div>
               <div class="answer-paragraph">
-                <p>Friedrich, Christian, Gulde, Ralf; Lechler, Armin; Verl, Alexander: <br>&quot;Maintenance automation: Concepts for manipulation planning, control and execution&quot; In: IEEE Transactions on Automation Science and Engineering (TASE), <em>2021 <br>- In Review</em><em><br></em></p>
+                <p>Friedrich, Christian, Gulde, Ralf; Lechler, Armin; Verl, Alexander: <br>&quot;Maintenance Automation: Methods for Robotics Manipulation Planning and Execution&quot; In: IEEE Transactions on Automation Science and Engineering (2022)., <em>2022 <br>- In Review</em><em><br></em></p>
               </div>
             </div>
           </div>
