--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ background: #c7c7c7;
           <div class="gray-title">Ralf Gulde</div>
         </div>
         <div class="intro-right-column picture">
-          <div><img src="images/Gulde_Ralf_HG_2.jpg" width="451.5" srcset="images/Gulde_Ralf_HG_2-p-1080.jpeg 1080w, images/Gulde_Ralf_HG_2-p-1600.jpeg 1600w, images/Gulde_Ralf_HG_2-p-2000.jpeg 2000w, images/Gulde_Ralf_HG_2-p-2600.jpeg 2600w, images/Gulde_Ralf_HG_2-p-3200.jpeg 3200w, images/Gulde_Ralf_HG_2.jpg 3544w" sizes="(max-width: 479px) 91vw, (max-width: 767px) 68vw, 451.5px" alt="" class="grayscale-filter"></div>
+          <div><img src="images/ralfgulde.jpg" width="451.5" srcset="images/ralfgulde.jpg 1080w, images/ralfgulde.jpg 1600w, images/ralfgulde.jpg 2000w, images/ralfgulde.jpg 2600w, images/ralfgulde.jpg 3200w, images/ralfgulde.jpg 3544w" sizes="(max-width: 479px) 91vw, (max-width: 767px) 68vw, 451.5px" alt="" class="grayscale-filter"></div>
         </div>
       </div>
       <div class="inner-column-section intro">
