--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ background: #c7c7c7;
       </div>
       <div id="Faq" data-w-id="54aa4f48-1446-957f-9ae7-f1fe528a2064" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="inner-column-section">
         <div class="side-left-column">
-          <div class="gray-title">Publications</div>
+          <div class="gray-title">Selected Publications</div>
         </div>
         <div class="side-right-column">
           <div>
@@ -221,6 +221,7 @@ background: #c7c7c7;
                 </div>
               </div>
             </div>
+            <!--
             <div class="bottom-border">
               <div class="flex-no-wrapp">
                 <div class="answer"></div>
@@ -233,6 +234,7 @@ background: #c7c7c7;
                 </div>
               </div>
             </div>
+            -->
             <div class="bottom-border">
               <div class="flex-no-wrapp">
                 <div class="answer"></div>
