--- a/index.html
+++ b/index.html
@@ -274,35 +274,25 @@ background: #c7c7c7;
       <div id="Contact" data-w-id="f25446cd-be28-8c0d-5e5d-4454b9b0e97a" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="inner-column-section">
         <div class="side-left-column">
           <div class="gray-title more-border">Contact Details</div>
-          <div class="side-item">
-            <h4 class="h4 no-border">Email</h4>
-            <div class="small-title">ralf.gulde@online.de</div>
+        </div>
+        <div class="side-right-column">
+          <div class="flex">
+            <div class="answer"></div>
+            <div class="answer-paragraph">
+            <h4 class="h4 no-border">Mail</h4>
+            <div class="small-title">ralf.gulde[at]online.de</div>
           </div>
-          <div class="side-item">
+          <div class="flex">
+            <div class="answer"></div>
+            <div class="answer-paragraph">
             <h4 class="h4 no-border">Phone</h4>
             <div class="small-title">+49 711 685-82505</div>
           </div>
-          <div class="side-item">
+          <div class="flex">
+            <div class="answer"></div>
+            <div class="answer-paragraph">
             <h4 class="h4 no-border">Address</h4>
             <div class="small-title">Stuttgart, Germany</div>
-          </div>
-        </div>
-        <div class="side-right-column">
-          <h4>Contact me</h4>
-          <p>If you want to get in touch with me you can send me a message filling up de following form, I’ll usually will answer within 24 hour period.</p>
-          <div class="form-block w-form">
-            <form data-name="Contact Form" name="wf-form-Contact-Form" class="form-flex">
-              <div class="form-input"><label for="Name-3" class="field-label">Name</label><input type="text" class="text-field w-input" maxlength="256" name="Name-3" data-name="Name 3" placeholder="Your name" required=""></div>
-              <div class="form-input"><label for="Last-Name" class="field-label">Last</label><input type="text" maxlength="256" name="Last-Name" data-name="Last Name" placeholder="Last name" class="text-field w-input"></div>
-              <div class="form-input"><label for="Email" class="field-label">Email</label><input type="email" class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="Your email" required=""></div>
-              <div class="form-input"><label for="Phone" class="field-label">Phone</label><input type="text" maxlength="256" name="Phone" data-name="Phone" placeholder="Your phone" class="text-field w-input"></div>
-              <div class="message"><label for="Message" class="field-label">Message</label><textarea data-name="Message" name="Message" placeholder="Your message" maxlength="5000" required="" class="message-field w-input"></textarea></div><input type="submit" value="Send" data-wait="Please wait..." class="submit-button w-button"></form>
-            <div class="success-message w-form-done">
-              <div>Thank you! Your submission has been received!</div>
-            </div>
-            <div class="w-form-fail">
-              <div>Oops! Something went wrong while submitting the form.</div>
-            </div>
           </div>
         </div>
       </div>
