--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ background: #c7c7c7;
                 <div class="less-line-height"><br>LinkedIn</div>
               </a>
             </div>
-            <div class="static _2"><a href="https://sereact.ai" class="w-inline-block"><img src="images/sereact.png" width="62" alt="" class="scale-on-hover"></a>
+            <div class="static _2"><a href="https://sereact.ai" class="w-inline-block"><img src="images/sereact2.png" width="62" alt="" class="scale-on-hover"></a>
               <a href="https://sereact.ai" class="w-inline-block">
                 <div class="less-line-height"><br>sereact</div>
               </a>
