--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ background: #c7c7c7;
             </div>
             <div class="static _2"><a href="https://sereact.ai" class="w-inline-block"><img src="images/sereact3.png" width="62" alt="" class="scale-on-hover"></a>
               <a href="https://sereact.ai" class="w-inline-block">
-                <div class="less-line-height"><br>sereact</div>
+                <div class="less-line-height"><br>Sereact</div>
               </a>
             </div>
             <div class="static _3"><a href="https://github.com/ralfgulde" class="w-inline-block"><img src="images/GitHub-Mark.png" width="62" alt="" class="scale-on-hover"></a>
@@ -113,7 +113,7 @@ background: #c7c7c7;
           <div class="less-bottom-border">
             <h4 class="h4 less-border">Co-Founder @ sereact</h4>
             <div class="small-title">2021 ─ Present</div>
-            <p>At sereact we built an adaptable AI to bring a new era of intelligent robots to commercial viability. We unleash the power of AI to enable our customers to close automation gaps and reach a new level of cost-efficiency.</p>
+            <p>At Sereact we built an adaptable AI to bring a new era of intelligent robots to commercial viability. We unleash the power of AI to enable our customers to close automation gaps and reach a new level of cost-efficiency.</p>
           </div>
           <div class="less-bottom-border">
             <h4 class="h4 less-border">AI Researcher</h4>
